--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -36,8 +36,8 @@
             <li role="separator" class="divider"></li>
             <li> <strong>Students </strong></li>
 
-                <li><a href="{{ site.baseurl }}/mathphd.html">Ph.D.</a></li>
-                <li><a href="{{ site.baseurl }}/mathintphd.html">Int Ph.D.</a></li>
+                <li><a href="{{ site.baseurl }}/students-phd.html">Ph.D.</a></li>
+                <li><a href="{{ site.baseurl }}/students-intphd.html">Int Ph.D.</a></li>
                 <li><a href="{{ site.baseurl }}/people-stu-intdisphd.html">Interdisciplinary Ph.D.</a></li>
                 <li><a href="{{ site.baseurl }}/jrf.html">Jr. Research Associates</a></li>
             </li>
