course pages, postdocs

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
-        <li><a href="{{ site.baseurl }}/newcourse.html">Courses</a></li>
+        <li><a href="{{ site.baseurl }}/course-list.html">Courses</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Research <span class="caret"></span></a>
@@ -32,14 +32,13 @@
             <li><a href="{{ site.baseurl }}/people_emisci.html">Emeritus Scientists </a></li>
             <li><a href="{{ site.baseurl }}/people_nmidis.html">NMI distinguished associates </a></li>
             <li><a href="{{ site.baseurl }}/people_if.html">Inspire Fellows/DST Young scientists</a></li>
-            <li><a href="{{ site.baseurl }}/people-postdoc.html">Post-Docs</a></li>
+            <li><a href="{{ site.baseurl }}/postdocs.html">Post-Docs</a></li>
             <li role="separator" class="divider"></li>
             <li> <strong>Students </strong></li>
 
                 <li><a href="{{ site.baseurl }}/students-phd.html">Ph.D.</a></li>
                 <li><a href="{{ site.baseurl }}/students-intphd.html">Int Ph.D.</a></li>
                 <li><a href="{{ site.baseurl }}/people-stu-intdisphd.html">Interdisciplinary Ph.D.</a></li>
-                <li><a href="{{ site.baseurl }}/jrf.html">Jr. Research Associates</a></li>
             </li>
             <li role="separator" class="divider"></li>
 
