--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -31,7 +31,7 @@
             <li><a href="{{ site.baseurl }}/faculty.html">Faculty </a></li>
             <li><a href="{{ site.baseurl }}/people_emisci.html">Emeritus Scientists </a></li>
             <li><a href="{{ site.baseurl }}/people_nmidis.html">NMI distinguished associates </a></li>
-            <li><a href="{{ site.baseurl }}/people_if.html">Inspire Fellows/DST Young scientists</a></li>
+            <li><a href="{{ site.baseurl }}/inspire.html">Inspire Fellows/DST Young scientists</a></li>
             <li><a href="{{ site.baseurl }}/postdocs.html">Post-Docs</a></li>
             <li role="separator" class="divider"></li>
             <li> <strong>Students </strong></li>
