--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,8 @@
 
   <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="{{ site.baseurl}}/extras.css">
+
 
   <!-- mathjax config similar to math.stackexchange -->
 <script type="text/x-mathjax-config">
