--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,6 +42,20 @@ MathJax.Hub.Config({
 
 
 <body>
+<div class="container-fluid">
+  <div class="bg-primary" style="border-radius: 25px;" >
+    <div class="banner">
+      <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 20px; margin-right: 20px;"></img>
+      <h2 class="text-center" style="margin-top: 30px;"> Department of Mathematics,  </h2>
+      <h2 class="text-center">Indian Institute of Science</h2>
+
+    </div>
+
+
+    </div>
+
+</div>
+
 
   <div class="container">
     <!-- <img src="images/title.gif" class="center-block" width="100%"> -->
@@ -59,8 +73,5 @@ MathJax.Hub.Config({
       </div>
 
     </div> -->
-    <div class="bg-primary">
-    <h1 class="text-center"> Department of Mathematics, Indian Institute of Science </h1>
-  </div>
 
   {% include navbar.html %}
