--- a/extras.css
+++ b/extras.css
@@ -8,3 +8,11 @@
 li.dropdown:hover > .dropdown-menu {
     display: block;
 }
+
+.banner {
+  padding-top: 5px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  border-radius: 25px;
+}
