--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,9 @@
 
   <link rel="stylesheet" href="{{ site.baseurl}}/extras.css">
 
+  <script type="text/javascript" async
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js">
+  </script>
 
   <!-- mathjax config similar to math.stackexchange -->
 <script type="text/x-mathjax-config">
