--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
   <title> {{ topbar }}</title>
   <link rel="icon" href="{{ site.baseurl }}/IIScLogo.jpg">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Bootstrap -->
 
