--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,8 +29,8 @@
             People <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{{ site.baseurl }}/faculty.html">Faculty </a></li>
-            <li><a href="{{ site.baseurl }}/people_emisci.html">Emeritus Scientists </a></li>
-            <li><a href="{{ site.baseurl }}/people_nmidis.html">NMI distinguished associates </a></li>
+            <li><a href="{{ site.baseurl }}/emsci.html">Emeritus Scientists </a></li>
+            <li><a href="{{ site.baseurl }}/nmi-dist.html">NMI distinguished associates </a></li>
             <li><a href="{{ site.baseurl }}/inspire.html">Inspire Fellows/DST Young scientists</a></li>
             <li><a href="{{ site.baseurl }}/postdocs.html">Post-Docs</a></li>
             <li role="separator" class="divider"></li>
@@ -55,7 +55,7 @@
 
         <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-    Degree programs <span class="caret"></span></a>
+    Degree progs <span class="caret"></span></a>
   <ul class="dropdown-menu">
     <li><a href="{{ site.baseurl }}/degprog-phd.html">Ph.D. program</a></li>
     <li><a href="{{ site.baseurl }}/degprog-intphd.html">Integrated Ph.D. program</a></li>
@@ -63,7 +63,7 @@
   </ul>
 </li>
 
-<li><a href="{{ site.baseurl }}/pros-fac.html">Faculty Positions</a></li>
+<li><a href="{{ site.baseurl }}/pros-fac.html">Faculty Jobs</a></li>
 
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -73,11 +73,19 @@
 
   </ul>
 </li>
-
-
-
-
       </ul>
+
+      <div class="col-sm-3 col-md-3">
+        <form class="navbar-form" role="search" action="http://www.google.com/search">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search" name="q">
+            <input type="hidden" class="form-control" name="sitesearch" value="math.iisc.ac.in"/>
+            <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
+            </div>
+        </div>
+        </form>
+    </div>
       <ul class="nav navbar-nav navbar-right">
         {% if page.showpubs %}
         {% include publist.html %}
