newly genrated pubs, new script Should also remove braces outside formulas

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="{{ site.baseurl}}/extras.css">
 
   <script type="text/javascript" async
-    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js">
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
 
   <!-- mathjax config similar to math.stackexchange -->
