updated publications, seminar tweaks

--- a/_layouts/seminar.html
+++ b/_layouts/seminar.html
@@ -6,8 +6,8 @@
  <h5><strong> Title: </strong> {{ page.title }} </h5>
 <h5>  <strong>Speaker: </strong> {{page.speaker}} </h5>
 <h5>  <strong>Date: </strong>{{ page.date | date_to_long_string }} </h5>
-
-
+<h5><strong>Time:</strong> {{page.time}}</h5>
+<h5><strong>Venue:</strong> {{page.venue}} </h5>
     {{ content }}
   </div>
 
