corrections to people

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -38,12 +38,12 @@
 
                 <li><a href="{{ site.baseurl }}/students-phd.html">Ph.D.</a></li>
                 <li><a href="{{ site.baseurl }}/students-intphd.html">Int Ph.D.</a></li>
-                <li><a href="{{ site.baseurl }}/people-stu-intdisphd.html">Interdisciplinary Ph.D.</a></li>
+                <li><a href="{{ site.baseurl }}/students-intdisphd.html">Interdisciplinary Ph.D.</a></li>
             </li>
             <li role="separator" class="divider"></li>
 
                 <li><a href="{{ site.baseurl }}/people-staff.html">Staff</a></li>
-                <li><a href="{{ site.baseurl }}/people-trainee.html">Project staff</a></li>
+                <li><a href="{{ site.baseurl }}/trainees.html">Project staff</a></li>
             </li>
 
           </ul>
