"teaching" in Navbar; course schedule

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,6 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
-        <li><a href="{{ site.baseurl }}/course-list.html">Courses</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Research <span class="caret"></span></a>
@@ -55,8 +54,11 @@
 
         <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-    Degree progs <span class="caret"></span></a>
+    Teaching <span class="caret"></span></a>
   <ul class="dropdown-menu">
+    <li><a href="{{ site.baseurl }}/course-list.html">Courses</a></li>
+    <li><a href="{{ site.baseurl }}/course-schedule.html">Course-Schedule</a></li>
+    <li class="dropdown-header"> Degree programs</li>
     <li><a href="{{ site.baseurl }}/degprog-phd.html">Ph.D. program</a></li>
     <li><a href="{{ site.baseurl }}/degprog-intphd.html">Integrated Ph.D. program</a></li>
     <li><a href="http://www.iisc.ernet.in/ug/" target="_blank">Undergraduate program</a></li>
