header shrunk, footer placeholder

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,16 @@
   </div>
 
+<div class="container">
+  <div class="bg-primary" style="border-radius: 5px; margin-top: 7px; margin-bottom: 7px; padding:7px;">
+    <div class="row" style="margin-left: 10px;">
+        <strong>Contact:</strong> Indian Institute of Science, Bangalore 560012
+      <div class="pull-right" style="margin-right: 20px;">
+        E-mail: <em>chairman.math[at]iisc[dot]ac[dot]in</em></a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript" src='{{ site.baseurl }}/js/bootstrap.min.js'></script>
 
