--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,11 +47,11 @@ MathJax.Hub.Config({
 
 <body>
 <div class="container">
-  <div class="bg-primary" style="border-radius: 25px;" >
+  <div class="bg-primary" style="border-radius: 15px;" >
     <div class="banner">
-      <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 20px; margin-right: 20px;"></img>
-      <h1 class="text-center" style="margin-top: 30px;"> Department of Mathematics  </h1>
-      <h2 class="text-center">Indian Institute of Science</h2>
+      <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 10px;"></img>
+      <h2 class="text-center"> Department of Mathematics  </h2>
+      <h3 class="text-center">Indian Institute of Science</h3>
 
     </div>
 
