--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,21 @@
   </div>
 
 <div class="container">
+  <div class="row">
+    <p></p>
+  </div>
   <div class="bg-primary" style="border-radius: 5px; margin-top: 7px; margin-bottom: 7px; padding:7px;">
+
     <div class="row" style="margin-left: 10px;">
         <strong>Contact:</strong> Indian Institute of Science, Bangalore 560012
       <div class="pull-right" style="margin-right: 20px;">
         E-mail: <em>chairman.math[at]iisc[dot]ac[dot]in</em></a>
       </div>
     </div>
+
+    </div>
+    <div class="row">
+      <p></p>
   </div>
 </div>
 
