--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -89,7 +89,7 @@
             <li><a href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
             <li><a href="http://math.iisc.ac.in/~nmi/" target="_blank"> NMI</a></li>
             <li><a href="{{site.baseurl}}/conus.html">Contact Us</a></li>
-            <li><a href="{{site.baseurl}}/fileIndex.html">Department Foms</a></li>
+            <li><a href="{{site.baseurl}}/fileIndex.html">Department Forms</a></li>
             <li><a href="{{site.baseurl}}/intro.html">About Us</a></li>
           </ul>
         </li>
