--- a/extras.css
+++ b/extras.css
@@ -1,5 +1,5 @@
 
-/*.navbar-default .navbar-nav > li.dropdown:hover > a,
+.navbar-default .navbar-nav > li.dropdown:hover > a,
 .navbar-default .navbar-nav > li.dropdown:hover > a:hover,
 .navbar-default .navbar-nav > li.dropdown:hover > a:focus {
     background-color: rgb(231, 231, 231);
@@ -7,7 +7,7 @@
 }
 li.dropdown:hover > .dropdown-menu {
     display: block;
-}*/
+}
 
 .banner {
   padding-top: 5px;
