--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,9 @@
 
   <link rel="stylesheet" href="{{ site.baseurl}}/extras.css">
 
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript" src='{{ site.baseurl }}/js/bootstrap.min.js'></script>
+
   <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
