--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,7 +34,7 @@
             <li><a href="{{ site.baseurl }}/postdocs.html">Post-Docs</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header"> <strong>Students </strong></li>
-
+            <li><a href="{{ site.baseurl }}/phds.html">Ph.D. Alumni</a></li>
                 <li><a href="{{ site.baseurl }}/students-phd.html">Ph.D.</a></li>
                 <li><a href="{{ site.baseurl }}/students-intphd.html">Int Ph.D.</a></li>
                 <li><a href="{{ site.baseurl }}/students-intdisphd.html">Interdisciplinary Ph.D.</a></li>
