--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -88,7 +88,7 @@
             <li><a href="https://math.iisc.ac.in/~library" target="_blank">Mathematics library</a></li>
             <li><a href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
             <li><a href="http://math.iisc.ac.in/~nmi/" target="_blank"> NMI</a></li>
-            <li><a href="{{site.baseurl}}/conus.html">Contact Us</a></li>
+            <li><a href="{{site.baseurl}}/contact-us.html">Contact Us</a></li>
             <li><a href="{{site.baseurl}}/fileIndex.html">Department Forms</a></li>
             <li><a href="{{site.baseurl}}/intro.html">About Us</a></li>
           </ul>
