--- a/_includes/course-table.html
+++ b/_includes/course-table.html
@@ -2,7 +2,7 @@
 <table class="table table-bordered">
   <tr>
     <strong>
-    <td>Course No</td> <td>Credits</td><td>Course title</td> <td>Instructor</td>
+      <td><b>Course No.</b></td> <td><b>Credits</b></td><td><b>Course Title</b></td> <td><b>Instructor</b></td>
   </strong>
   </tr>
   {% for course in list %}
