--- a/_includes/semester-courses.html
+++ b/_includes/semester-courses.html
@@ -1,6 +1,6 @@
 
 
-<h4> Core for Integrated Ph.D. first year or U.G. third year: </h4>
+<h4> Core courses for Integrated Ph.D. first year or U.G. third year: </h4>
 
 {% assign list = semester.core1 %}
 
@@ -8,7 +8,7 @@
 <p>&nbsp;</p>
 
 {% if semester.core2 %}
-<h4> Core for Integrated Ph.D. second year:  </h4>
+<h4> Core courses for Integrated Ph.D. second year:  </h4>
 
 {% assign list = semester.core2 %}
 
