--- a/_includes/semester-courses.html
+++ b/_includes/semester-courses.html
@@ -1,5 +1,5 @@
 
-
+<p>&nbsp;</p>
 <h4> Core courses for Integrated Ph.D. first year or U.G. third year </h4>
 
 {% assign list = semester.core1 %}
@@ -21,3 +21,4 @@
 {% assign list = semester.electives %}
 
 {% include course-table.html %}
+<p>&nbsp;</p>
