--- a/scripts/mathdept.css
+++ b/scripts/mathdept.css
@@ -21,7 +21,7 @@ td { font:12px Verdana, Arial, Helvetica, sans-serif}
 select {
 	border-width: 1;
 	border-color: #999999;
-	background-color: #eeeeee;
+	background-color: #cccccc;
 	font: arial, verdana, helvetica, sans-serif;
 	scrollbar-border-color: #999999;
 	scrollbar-darkshadow-color: #666666;
