--- a/scripts/mathdept.css
+++ b/scripts/mathdept.css
@@ -60,5 +60,5 @@ input.ButtonHover {
 .smalltxt { font:11px Verdana, Arial, Helvetica, sans-serif; color: #666666}
 
 body{
-    background: #F8FFFF;
+    background: #000000 !important;
 }
