--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10,9 +10,7 @@ html {
       -ms-text-size-adjust: 100%;
 }
 body {
-  margin: 0;
-  background: #000000 !important;
-}
+  margin: 0; }
 article,
 aside,
 details,
