--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,11 +29,11 @@
           <ul class="dropdown-menu">
             <li><a href="{{ site.baseurl }}/faculty.html">Faculty </a></li>
             <li><a href="{{ site.baseurl }}/emsci.html">Emeritus Scientists </a></li>
-            <li><a href="{{ site.baseurl }}/nmi-dist.html">NMI distinguished associates </a></li>
-            <li><a href="{{ site.baseurl }}/inspire.html">Inspire Fellows/DST Young scientists</a></li>
-            <li><a href="{{ site.baseurl }}/postdocs.html">Post-Docs</a></li>
+            <li><a href="{{ site.baseurl }}/nmi-dist.html">NMI Distinguished Associates </a></li>
+            <li><a href="{{ site.baseurl }}/inspire.html">Inspire Fellows/DST Young Scientists</a></li>
+            <li><a href="{{ site.baseurl }}/postdocs.html">Postdocs</a></li>
             <li role="separator" class="divider"></li>
-            <li class="dropdown-header"> <strong>Students </strong></li>
+            <li class="dropdown-header"> <b>Students </b></li>
             <li><a href="{{ site.baseurl }}/phds.html">Ph.D. Alumni</a></li>
                 <li><a href="{{ site.baseurl }}/students-phd.html">Ph.D.</a></li>
                 <li><a href="{{ site.baseurl }}/students-intphd.html">Int Ph.D.</a></li>
