--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -33,7 +33,7 @@
             <li><a href="{{ site.baseurl }}/inspire.html">Inspire Fellows/DST Young Scientists</a></li>
             <li><a href="{{ site.baseurl }}/postdocs.html">Postdocs</a></li>
             <li role="separator" class="divider"></li>
-            <li class="dropdown-header"> <b>Students </b></li>
+            <li class="dropdown-header"> <font color="#000000"><b>STUDENTS</b></font></li>
             <li><a href="{{ site.baseurl }}/phds.html">Ph.D. Alumni</a></li>
                 <li><a href="{{ site.baseurl }}/students-phd.html">Ph.D.</a></li>
                 <li><a href="{{ site.baseurl }}/students-intphd.html">Int Ph.D.</a></li>
@@ -42,7 +42,7 @@
             <li role="separator" class="divider"></li>
 
                 <li><a href="{{ site.baseurl }}/people-staff.html">Staff</a></li>
-                <li><a href="{{ site.baseurl }}/trainees.html">Project staff</a></li>
+                <li><a href="{{ site.baseurl }}/trainees.html">Project Staff</a></li>
             </li>
 
           </ul>
