--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -54,7 +54,7 @@
             <li><a href="{{ site.baseurl }}/course-list.html">Courses</a></li>
             <li><a href="{{ site.baseurl }}/course-schedule.html">Course Schedule</a></li>
             <li role="separator" class="divider"></li>
-            <li class="dropdown-header"> <font color="#000000"><strong>DEGREE PROGRAMS</strong> </li>
+            <li class="dropdown-header"> <font color="#000000"><strong>DEGREE PROGRAMS</strong></font> </li>
             <li><a href="{{ site.baseurl }}/degprog-phd.html">Ph.D. Program</a></li>
             <li><a href="{{ site.baseurl }}/degprog-intphd.html">Integrated Ph.D. Program</a></li>
             <li><a href="http://www.iisc.ernet.in/ug/" target="_blank">Undergraduate Program</a></li>
@@ -81,7 +81,7 @@
             <li><a href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
             <li><a href="http://math.iisc.ac.in/~nmi/" target="_blank"> NMI</a></li>
             <li role="separator" class="divider"></li>
-            <li class="dropdown-header"> <font color="#000000"><strong>UTILITIES</strong> </li>
+            <li class="dropdown-header"> <font color="#000000"><strong>UTILITIES</strong></font> </li>
             <li><a href="{{site.baseurl}}/fileIndex.html">Department Forms</a></li>
             <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail<a/></li> 
             <!-- <li><a href="{{site.baseurl}}/contact-us.html">Contact Us</a></li> -->
