--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -83,7 +83,7 @@
             <li role="separator" class="divider"></li>
             <li class="dropdown-header"> <font color="#000000"><strong>UTILITIES</strong></font> </li>
             <li><a href="{{site.baseurl}}/fileIndex.html">Department Forms</a></li>
-            <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail<a/></li> 
+            <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li> 
             <!-- <li><a href="{{site.baseurl}}/contact-us.html">Contact Us</a></li> -->
             <!-- <li><a href="{{site.baseurl}}/intro.html">About Us</a></li> -->
           </ul>
