--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -54,10 +54,10 @@
             <li><a href="{{ site.baseurl }}/course-list.html">Courses</a></li>
             <li><a href="{{ site.baseurl }}/course-schedule.html">Course Schedule</a></li>
             <li role="separator" class="divider"></li>
-            <li class="dropdown-header"> <font color="#000000"><strong>DEGREE PROGRAMS</strong></font> </li>
-            <li><a href="{{ site.baseurl }}/degprog-phd.html">Ph.D. Program</a></li>
-            <li><a href="{{ site.baseurl }}/degprog-intphd.html">Integrated Ph.D. Program</a></li>
-            <li><a href="http://www.iisc.ernet.in/ug/" target="_blank">Undergraduate Program</a></li>
+            <li class="dropdown-header"> <font color="#000000"><strong>DEGREE PROGRAMMES</strong></font> </li>
+            <li><a href="{{ site.baseurl }}/degprog-phd.html">Ph.D. Programme</a></li>
+            <li><a href="{{ site.baseurl }}/degprog-intphd.html">Integrated Ph.D. Programme</a></li>
+            <li><a href="http://www.iisc.ernet.in/ug/" target="_blank">Undergraduate Programme</a></li>
           </ul>
         </li>
 
