--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,8 +55,8 @@ MathJax.Hub.Config({
   <div class="bg-primary">
     <div class="banner">
       <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 10px;"></img>
-      <h2 class="text-center"> Department of Mathematics  </h2>
-      <h3 class="text-center">Indian Institute of Science</h3>
+    <h2 class="text-center"> <font face="Helvetica">Department of Mathematics</font> </h2>
+    <h3 class="text-center"> <font face="Helvetica">Indian Institute of Science</font> </h3>
 
     </div>
 
