--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,9 +54,9 @@ MathJax.Hub.Config({
 <div class="container">
   <div class="bg-primary">
     <div class="banner">
-      <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 10px;"></img>
-    <h2> <font face="Times New Roman">Department of Mathematics</font> </h2>
-    <h3> <font face="Times New Roman">Indian Institute of Science</font> </h3>
+      <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 100px;"></img>
+    <h2> <font face="Verdana">Department of Mathematics</font> </h2>
+    <h3> <font face="Verdana">Indian Institute of Science</font> </h3>
 
     </div>
 
