--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,8 +55,8 @@ MathJax.Hub.Config({
   <div class="bg-primary">
     <div class="banner">
       <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 50px;"></img>
-    <h2 style="margin-left:150px"> <font face="Arial">Department of Mathematics</font> </h2>
-    <h3 style="margin-left:150px; margin-top: -3"> <font face="Georgia">Indian Institute of Science</font> </h3>
+    <h2 style="margin-left:150px"> Department of Mathematics </h2>
+    <h3 style="margin-left:150px; margin-top: -8"> <font face="Georgia">Indian Institute of Science</font> </h3>
 
     </div>
 
