--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@ MathJax.Hub.Config({
     <div class="banner">
       <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 50px;"></img>
     <h2 style="margin-left:150px"> Department of Mathematics </h2>
-    <h3 style="margin-left:150px; margin-top: -8"> <font face="Georgia">Indian Institute of Science</font> </h3>
+    <h3 style="margin-left:150px; margin-top: -18px"> <font face="Georgia">Indian Institute of Science</font> </h3>
 
     </div>
 
