--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,7 +55,7 @@ MathJax.Hub.Config({
   <div class="bg-primary">
     <div class="banner">
       <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 50px; margin-bottom: 10px"></img>
-    <h2 style="margin-left:150px"> <font face="Georgia">Department of Mathematics</font> </h2>
+    <h2 style="margin-left:150px"> <font face="Arial">Department of Mathematics</font> </h2>
     <h3 style="margin-left:150px; margin-top: -7px"> <font face="Georgia">Indian Institute of Science</font> </h3>
 
     </div>
