--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,9 +54,9 @@ MathJax.Hub.Config({
 <div class="container">
   <div class="bg-primary">
     <div class="banner">
-      <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 50px; margin-bottom: 30px"></img>
+      <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 50px;"></img>
     <h2 style="margin-left:150px"> <font face="Arial">Department of Mathematics</font> </h2>
-    <h3 style="margin-left:150px; margin-top: -6px"> <font face="Lucida">Indian Institute of Science</font> </h3>
+    <h3 style="margin-left:150px; margin-top: -6px; margin-bottom: 10px"> <font face="Lucida">Indian Institute of Science</font> </h3>
 
     </div>
 
