--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,7 @@
     <div class="collapse navbar-collapse" id="navigationbar">
       <ul class="nav navbar-nav">
         <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
+        <li><a href="{{ site.baseurl }}/news.html">News</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Research <span class="caret"></span></a>
