--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@ MathJax.Hub.Config({
     <div class="banner">
       <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 65px;"></img>
     <h2 style="margin-left:140px"> Department of Mathematics </h2>
-    <h4 style="margin-left:140px; margin-top: -4px; margin-bottom: 10px"> <font face="Arial Black">INDIAN INSTITUTE OF SCIENCE</font> </h3>
+    <h4 style="margin-left:140px; margin-top: -4px; margin-bottom: 10px"> INDIAN INSTITUTE OF SCIENCE </h3>
 
     </div>
 
