--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,7 +54,7 @@ MathJax.Hub.Config({
 <div class="container">
   <div class="bg-primary">
     <div class="banner">
-      <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 65px; margin-bottom: 10px;"></img>
+      <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 10px; margin-right: 65px; padding-bottom: 10px"></img>
     <h2 style="margin-left:140px"> Department of Mathematics </h2>
     <h4 style="margin-left:140px; margin-top: -4px; margin-bottom: 10px"> INDIAN INSTITUTE OF SCIENCE </h4>
   </div>
