--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,7 @@ MathJax.Hub.Config({
 
 
 <body>
-<div class="container" style="border:1px solid #cecece; background-color: #f5f5f5;">
+<div class="container" style="border:1px solid #cecece; background-color: #fcfcff;">
   <div class="bg-primary">
     <div class="banner">
       <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 4px; margin-right: 65px;"></img>
