--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,13 +13,13 @@
       </div>
     </div>
     </div>
-    
+
     <div class="row">
       <br><br>
   </div>
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript" src='{{ site.baseurl }}/js/bootstrap.min.js'></script>
 
 </body>
