--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,8 +43,8 @@ MathJax.Hub.Config({
 });
 </script>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript" src='{{ site.baseurl }}/js/bootstrap.min.js'></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript" src='{{ site.baseurl }}/js/bootstrap.min.js'></script> -->
 
 </head>
 
