--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
   <div class="bg-primary" style="border-radius: 0px; margin-top: 7px; margin-bottom: 7px; padding:7px;">
 
     <div class="row" style="margin-left: 10px;">
-      <a href ="{{ site.baseurl }}/contact-us.html" style="color: rgb(255,255,255);" onMouseOver="underline"> <b>Contact</b></a><b>:</b> Indian Institute of Science, Bangalore 560012
+      <a href ="{{ site.baseurl }}/contact-us.html" style="color: rgb(255,255,255); text-decoration: underline;" > <b>Contact</b></a><b>:</b> Indian Institute of Science, Bangalore 560012
       <div class="pull-right" style="margin-right: 20px;">
         <b>E-mail:<b> <font face="Courier New">chairman.math[at]iisc[dot]ac[dot]in</font></a>
       </div>
