--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -63,7 +63,7 @@
           </ul>
         </li>
 
-<li><a href="{{ site.baseurl }}/pros-fac.html">Recruitment</a></li>
+<li><a href="{{ site.baseurl }}/pros-fac.html">Jobs</a></li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
     News & Events <span class="caret"></span></a>
