--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,8 +53,8 @@ MathJax.Hub.Config({
   <div class="bg-primary">
     <div class="banner">
       <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="100" style="margin-top: 4px; margin-right: 65px;"></img>
-    <h2 style="margin-left:140px"> Department of Mathematics </h2>
-    <h4 style="margin-left:140px; margin-top: -4px; margin-bottom: 10px"> INDIAN INSTITUTE OF SCIENCE </h4>
+    <center><h2> Department of Mathematics </h2></center>
+    <center><h4 style="margin-top: -4px; margin-bottom: 10px"> INDIAN INSTITUTE OF SCIENCE </h4></center>
   </div>
 </div>
 
