--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -3,5 +3,5 @@
 <h3>{{ page.code }}:  {{ page.title }}</h3>
 <p>&nbsp;</p>
     {{ content }}
-<p> {{ page.books }} </p>
+<p><h3> {{ page.books }} </h3> </p>
 {% include footer.html %}
