--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -3,5 +3,6 @@
 <h3>{{ page.code }}:  {{ page.title }}</h3>
 <p>&nbsp;</p>
     {{ content }}
-<p><h3> {{ page.books }} </h3> </p>
+<p>&nbsp;</p>
+{{ page.books }} 
 {% include footer.html %}
