--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -3,12 +3,14 @@
 <h3>{{ page.code }}:  {{ page.title }}</h3>
 <p>&nbsp;</p>
 {% if page.preqs %}
+Pre-requisites : <br> 
 {{ page.prereqs }} 
 {% endif %}
 <p>&nbsp;</p>
     {{ content }}
 <p>&nbsp;</p>
 {% if page.books %}
+Suggested books : <br>
 {{ page.books }}
 {% endif %}
 {% include footer.html %}
