--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -2,7 +2,7 @@
 
 <h3>{{ page.code }}:  {{ page.title }}</h3>
 <p>&nbsp;</p>
-{% if page.preqs %}
+{% if page.prereqs %}
 Pre-requisites : <br> 
 {{ page.prereqs }} 
 {% endif %}
