sem course correction

--- a/_includes/semester-courses.html
+++ b/_includes/semester-courses.html
@@ -1,7 +1,7 @@
 
 <table class="table table-bordered">
 
-<tr><td><h4> Core courses for Integrated Ph.D. first year or U.G. third year </h4></td>
+<tr><td><h4> Core for Int. Ph.D. 1st year/ U.G. 3rd year </h4></td>
   <td></td><td></td><td></td>
 </tr>
 {% assign list = semester.core1 %}
@@ -10,7 +10,7 @@
 
 
 {% if semester.core2 %}
-<tr> <td><h4>Core courses for Integrated Ph.D. second year</h4> </td>
+<tr> <td><h4>Core for Int. Ph.D. second year</h4> </td>
   <td></td><td></td><td></td></tr>
 
 {% assign list = semester.core2 %}
@@ -18,7 +18,7 @@
 {% include course-table.html %}
 {% endif %}
 
-<tr><td><h4> Elective courses </h4></td>
+<tr><td><h4> Electives  </h4></td>
   <td></td><td></td><td></td></tr>
 
 {% assign list = semester.electives %}
