4 credit courses, link to catalogue

--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -24,4 +24,7 @@
  {% endfor %}
  </ol>
 {% endif %}
+
+<br>
+<h4><a href="{{ site.baseurl}}/catalogue.html">All Courses</a></h4>
 {% include footer.html %}
