--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -52,7 +52,7 @@
             Teaching <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class="dropdown-header"> <font color="#000000"><strong>COURSES</strong></font> </li>
-            <li><a href="{{ site.baseurl }}/course-list.html">Current</a></li>
+            <li><a href="{{ site.baseurl }}/course-list.html">Current & Upcoming</a></li>
             <li><a href="{{ site.baseurl }}/course-schedule.html">Course Schedule</a></li>
             <li><a href="{{ site.baseurl }}/catalogue.html">Catalogue</a></li>
             <li role="separator" class="divider"></li>
