--- a/_layouts/seminar.html
+++ b/_layouts/seminar.html
@@ -7,12 +7,13 @@
 <h5>  <strong>Speaker: </strong> {{page.speaker}} </h5>
 <h5>  <strong>Date: </strong>{{ page.date | date_to_long_string }} </h5>
 <h5><strong>Time:</strong> {{page.time}}</h5>
-<h5><strong>Venue:</strong> {% if sem.venue %}
-    {{ sem.venue }}
+<h5><strong>Venue:</strong> 
+  {% if page.venue %}
+    {{ page.venue }}
     {% else %}
-    {{ sem.location }}
+    {{ page.location }}
     {% endif %} </h5>
-    {{ content }}
+    {{ page.content }}
   </div>
 
 </div>
