--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -95,6 +95,7 @@
             <li class="dropdown-header"> <font color="#000000"><strong>UTILITIES</strong></font> </li>
             <li><a href="{{site.baseurl}}/fileIndex.html">Department Forms</a></li>
             <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
+            <li><a href="{{ site.baseurl}}/IIScForms.html">IISc Forms</a></li>
           </ul>
         </li>
       </ul>
