--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -41,7 +41,7 @@
             <li><a href="{{ site.baseurl }}/students-intdisphd.html">Interdisciplinary Ph.D.</a></li>
             </li>
             <li role="separator" class="divider"></li>
-            <li><a href="{{ site.baseurl }}/people-staff.html">Staff</a></li>
+            <li><a href="{{ site.baseurl }}/staff.html">Staff</a></li>
             <li><a href="{{ site.baseurl }}/trainees.html">Project Staff</a></li>
             </li>
           </ul>
