--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -96,6 +96,8 @@
             <li><a href="{{site.baseurl}}/fileIndex.html">Department Forms</a></li>
             <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
             <li><a href="{{ site.baseurl}}/IIScForms.html">IISc Forms</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="{{site.baseurl}}/opportunities.html">Opportunities</a></li>
           </ul>
         </li>
       </ul>
