--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -86,7 +86,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Resources <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://math.iisc.ac.in/~library" target="_blank">Mathematics Library</a></li>
+            <li><a href="http://nbhmopac.math.iisc.ac.in/cgi-bin/koha/opac-main.pl" target="_blank">Mathematics Library</a></li>
             <li><a href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
             <li><a href="http://math.iisc.ac.in/~nmi/" target="_blank"> NMI</a></li>
            <!--<li><a href="http://math.iisc.ac.in/~opportunities/" target="_blank"> Opportunities </a></li>-->
