--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -20,7 +20,8 @@
 <ol>
 {% for book in page.books %}
  <li>
-   {{ book.author}}, <em>{{ book.title }}</em>, {{ book. publ }}.</li>
+   {% if book.author %}{{ book.author}}, {% endif %} <em>{{ book.title }}</em>
+ {% if book.publ %},{{ book. publ }}{% endif %}.</li>
  {% endfor %}
  </ol>
 {% endif %}
