seminar times, manju's resources

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -97,6 +97,18 @@
             <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
             <li><a href="{{ site.baseurl}}/IIScForms.html">IISc Forms</a></li>
             <li role="separator" class="divider"></li>
+            <li class="dropdown-header"> <font color="#000000"><strong>ACADEMIC</strong></font> </li>
+            <li>
+              <a href="http://www.iisc.ac.in/wp-content/uploads/2017/09/Student_information2017_New.pdf" target="_blank">
+                Student Information Handbook
+              </a></li>
+              <li><a href="http://www.iisc.ac.in/wp-content/uploads/2017/08/SOI_2017.pdf" target="_blank">
+                Scheme of Instruction
+              </a></li>
+              <li><a href="http://www.iisc.ernet.in/ug/SOI_2017.pdf" target="_blank">
+                Undergrad Scheme of Instruction
+              </a></li>
+            <li role="separator" class="divider"></li>
             <li><a href="{{site.baseurl}}/opportunities.html">Opportunities</a></li>
           </ul>
         </li>
