--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default" style="border-radius:0px;" role="navigation">
-  <div class="container-fluid" style="background-color: #f4f4f4;">
+  <div class="container-fluid bg-success">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigationbar">
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <span class="navbar-brand"> <a href="http://www.iisc.ac.in" target="_blank"> IISc</a></span>
+      <span class="navbar-brand"> <a href="http://www.iisc.ac.in" style="color: rgb(255,255,255);" target="_blank"> IISc</a></span>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
