--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default" style="border-radius:0px;" role="navigation">
-  <div class="container-fluid bg-success">
+  <div class="container-fluid bg-muted">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigationbar">
