--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -123,7 +123,7 @@
             <input type="text" class="form-control" placeholder="Search" name="q">
             <input type="hidden" class="form-control" name="sitesearch" value="math.iisc.ac.in"/>
             <div class="input-group-btn">
-                <button class="btn btn-default btn-md" type="submit"><i class="fa fa-search"></i></button>
+                <button class="btn btn-default btn-sm" type="submit"><i class="fa fa-search"></i></button>
             </div>
         </div>
         </form>
