--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -119,7 +119,7 @@
         {% include publist.html %}
         {% endif %}
         <form class="navbar-form" role="search" action="http://www.google.com/search"  target="_blank">
-        <div class="input-group">
+        <div class="input-group input-group-sm">
             <input type="text" class="form-control" placeholder="Search" name="q">
             <input type="hidden" class="form-control" name="sitesearch" value="math.iisc.ac.in"/>
             <div class="input-group-btn">
