--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -119,9 +119,9 @@
         {% include publist.html %}
         {% endif %}
         <form class="navbar-form" role="search" action="http://www.google.com/search"  target="_blank">
-        <div class="input-group input-group-sm">
-            <input type="text" class="form-control form-control-sm" placeholder="Search" name="q">
-            <input type="hidden" class="form-control form-control-sm" name="sitesearch" value="math.iisc.ac.in"/>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search" name="q">
+            <input type="hidden" class="form-control" name="sitesearch" value="math.iisc.ac.in"/>
             <div class="input-group-btn">
                 <button class="btn btn-default btn-sm" type="submit"><i class="fa fa-search"></i></button>
             </div>
