--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" style="border-radius:0px;" role="navigation">
+<nav class="navbar navbar-light" style="border-radius:0px;" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -118,7 +118,7 @@
         {% if page.showpubs %}
         {% include publist.html %}
         {% endif %}
-        <form class="navbar-form" role="search" action="http://www.google.com/search"  target="_blank">
+        <form class="navbar-form my-2" role="search" action="http://www.google.com/search"  target="_blank">
         <div class="input-group input-group-sm">
             <input type="text" class="form-control" placeholder="Search" name="q">
             <input type="hidden" class="form-control" name="sitesearch" value="math.iisc.ac.in"/>
