--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -118,7 +118,7 @@
         {% if page.showpubs %}
         {% include publist.html %}
         {% endif %}
-        <form class="navbar-form my-2" role="search" action="http://www.google.com/search"  target="_blank">
+        <form class="navbar-form" role="search" action="http://www.google.com/search"  target="_blank">
         <div class="input-group input-group-sm">
             <input type="text" class="form-control" placeholder="Search" name="q">
             <input type="hidden" class="form-control" name="sitesearch" value="math.iisc.ac.in"/>
