--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-default bg-muted" style="border-radius:0px;" role="navigation">
+<!-- <nav class="navbar navbar-inverse" style="border-radius:0px; background-color: #e3f2fd;" role="navigation"> -->
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
