--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" style="border-radius:0px;" role="navigation">
+<nav class="navbar" style="border-radius:0px;" role="navigation">
   <div class="container-fluid" class="bg-basic">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
