--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,8 +53,8 @@ MathJax.Hub.Config({
   <div class="bg-primary">
     <div class="banner">
       <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="75" style="margin-top: 15px; margin-right: 15px;"></img>
-    <center><h2> Department of Mathematics </h2></center>
-    <center><h4 style="margin-bottom: 0px"> INDIAN INSTITUTE OF SCIENCE </h4></center>
+    <center><h2><font face="Arial"> Department of Mathematics </font></h2></center>
+    <center><h4 style="margin-bottom: 0px"><font face="Arial">INDIAN INSTITUTE OF SCIENCE </font></h4></center>
   </div>
 </div>
 
