--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,7 +54,8 @@ MathJax.Hub.Config({
     <div class="banner">
       <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="75" style="margin-top: 15px; margin-right: 15px;"></img>
     <center><h2><font face="Arial"> Department of Mathematics </font></h2></center>
-    <center><h4 style="margin-bottom: 0px"><font face="Arial">INDIAN INSTITUTE OF SCIENCE </font></h4></center>
+    <center><h4 style="margin-bottom: 0px"><font face="Arial">
+      <a href="http://www.iisc.ac.in" style="color: rgb(255,255,255);" target="_blank">INDIAN INSTITUTE OF SCIENCE</a> </font></h4></center>
   </div>
 </div>
 
