--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <span class="navbar-brand"> <a href="http://www.iisc.ac.in" style="color: rgb(255,255,255);" target="_blank"> IISc</a></span>
+      <!-- <span class="navbar-brand"> <a href="http://www.iisc.ac.in" style="color: rgb(255,255,255);" target="_blank"> IISc</a></span> -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
