--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <!-- <span class="navbar-brand"> <a href="http://www.iisc.ac.in" style="color: rgb(255,255,255);" target="_blank"> IISc</a></span> -->
+      <span class="navbar-brand"> <a href="http://www.iisc.ac.in" style="color: rgb(255,255,255);" target="_blank"> IISc</a></span>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -119,11 +119,11 @@
         {% include publist.html %}
         {% endif %}
         <form class="navbar-form" role="search" action="http://www.google.com/search"  target="_blank">
-        <div class="input-group input-group-sm">
+        <div class="input-group">
             <input type="text" class="form-control" placeholder="Search" name="q">
             <input type="hidden" class="form-control" name="sitesearch" value="math.iisc.ac.in"/>
             <div class="input-group-btn">
-                <button class="btn btn-default btn-sm" type="submit"><i class="fa fa-search"></i></button>
+                <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
             </div>
         </div>
         </form>
